# nexa-analise-avancada-de-imagens-e-texto-com-ia-na-aws

./: .gitignore
ocr_lista_escolar/: main.py  pyproject.toml
reconhecimento_celebridades/: main.py
