[project]
# Define o nome do projeto
name = "ocr-lista-escolar"

# Define a versão do projeto
version = "0.1.0"

# Breve descrição do projeto
description = "Add your description here"

# Arquivo README que acompanha o projeto (geralmente contém informações sobre o uso e objetivo do projeto)
readme = "README.md"

# Versão mínima do Python necessária para executar este projeto
requires-python = ">=3.13"  # Certifique-se de que essa versão está correta, pois Python 3.13 ainda não é amplamente utilizado.

# Lista de dependências necessárias para o projeto
dependencies = [
    # Biblioteca principal da AWS para interagir com serviços, como Textract
    "boto3>=1.35.63",

    # Extensão para tipagem e autocompletar, que melhora a produtividade ao usar boto3
    "boto3-stubs[textract]>=1.35.63",
]
